# ansible-role-template

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt
defaults/: main.yml
docker/: Dockerfile  Dockerfile.Bionic  Dockerfile.CentOS7  Dockerfile.CentOS8  Dockerfile.Focal  Makefile
meta/: main.yml
molecule/default/: converge.yml  create.yml  create_fail.yml  molecule.yml  playbook.yml  prepare.yml  verify.yml
molecule/vagrant/: molecule.yml
tasks/: facts.yml  include.yml  main.yml  update-Debian.yml  update-RedHat.yml  vars.yml
vars/: family-Debian.yml  family-RedHat.yml  main.yml
