[tool.poetry]
name = "ansible-role-template"
version = "0.1.0"
description = "An example role with molecule testing"
authors = ["Haydar Ciftci <haydar.ciftci@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
molecule-docker = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
